--- a/css/2016courseStyles.css
+++ b/css/2016courseStyles.css
@@ -94,17 +94,17 @@ p {
 	font-size: 12px;
 }
 
-.project {
-/*	float:right;*/
+/*.project {
+
 	margin-left: -30px; 
 	width:600px;
 }
 
 .project p{
-/*	float:right;*/
+
 	margin-left: 50px; 
 	width:600px;
-}
+}*/
 
 .subTitle {
 	max-width:400px;
