--- a/css/2016courseStyles.css
+++ b/css/2016courseStyles.css
@@ -64,6 +64,12 @@ p {
 	margin-left: 20px;
 }
 
+.resources{
+	margin-top:15px;
+	margin-left: 20px;
+}
+
+
 .readings{
 	/*margin-top:15px;*/
 	margin-left: 20px;
