--- a/css/2016courseStyles.css
+++ b/css/2016courseStyles.css
@@ -70,10 +70,10 @@ p {
 	margin-left: 20px;
 }
 
-.resources li{
+/*.resources li{
 	margin-top:15px;
 	margin-left: 20px;
-}
+}*/
 
 .readings{
 	/*margin-top:15px;*/
